# pocket_prover

./: .gitignore  Cargo.toml  README.md
examples/: eq_catus_cube.rs  exam.rs  extract.rs  god_does_not_exist.rs  inference_rules.rs  is_groupoid.rs  is_prop.rs  is_set.rs  logic_is_true.rs  molecule.rs  path1.rs  path1_vars.rs  quality.rs  quality_core_eq_propagation.rs  quality_core_hidden_bias.rs  quality_creation_theorem.rs  quality_entanglement.rs  quality_index_theorem.rs  quality_partial_equivalence.rs  quality_seshatism_vs_platonism.rs  quality_sym_core_eq.rs  quality_ty_differ.rs  quality_ty_uniq.rs  quantifiers.rs  qubit.rs  socrates.rs  vars.rs
pocket_prover-derive/: Cargo.toml  README.md
pocket_prover-derive/src/: lib.rs
pocket_prover-derive/tests/: lib.rs
src/: extract.rs  lib.rs
